Incoming Ambulance Alerts
Incoming Ambulance Alerts

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                       <i class="glyphicon glyphicon-facetime-video cc-notif-action-span" title="View Video" data-target="#viewVideoModal" data-toggle="modal"></i>
                       <i class="glyphicon glyphicon-map-marker cc-notif-action-span" title="View Route" onclick="showUserRoute(1);"></i>
                       <i class="glyphicon glyphicon-info-sign cc-notif-action-span" title="View Vehicle Info" data-target="#vehicleDetailModal" data-toggle="modal"></i>
-                      <i class="glyphicon glyphicon-road cc-notif-action-span" title="First Responder Lane Clear" onclick="changeToGreen(firstRespond);"></i>
+                      <i class="glyphicon glyphicon-road cc-notif-action-span" title="First Responder Lane Clear" onclick="getTrafficSignal();"></i>
+                      <i class="glyphicon glyphicon-ok-circle cc-notif-action-span" title="Go Signal"></i>
+                      <i class="glyphicon glyphicon-remove-circle cc-notif-action-span" title="Stop Signal"></i>
                     </td>
                   </tr>
                   <tr>
